fixed scrollbar

--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background: linear-gradient(135deg, #22233b 0%, #181927 100%);
     color: #f7f7fa;
